--- a/Notebook 3 Stats des SELLERS et CLIENT.ipynb
+++ b/Notebook 3 Stats des SELLERS et CLIENT.ipynb
@@ -30,9 +30,9 @@
       "Python version: 3.6.4 |Anaconda custom (64-bit)| (default, Mar 12 2018, 20:20:50) [MSC v.1900 64 bit (AMD64)]\n",
       "pandas version: 0.22.0\n",
       "matplotlib version: 2.2.2\n",
-      "NumPy version: 1.12.1\n",
-      "SciPy version: 1.0.0\n",
-      "IPython version: 6.2.1\n",
+      "NumPy version: 1.14.2\n",
+      "SciPy version: 1.0.1\n",
+      "IPython version: 6.3.1\n",
       "scikit-learn version: 0.19.1\n",
       "seaborn version: 0.8.1\n",
       "-------------------------\n"
@@ -138,6 +138,7 @@
        "        a += \"    \";\n",
        "    return a;\n",
        "}\n",
+       "// look up into all sections and builds an automated menu //\n",
        "var update_menu_string = function(begin, lfirst, llast, sformat, send, keep_item, begin_format, end_format) {\n",
        "    var anchors = document.getElementsByClassName(\"section\");\n",
        "    if (anchors.length == 0) {\n",
@@ -333,7 +334,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 100000 entries, 0 to 99999\n",
-      "Data columns (total 54 columns):\n",
+      "Data columns (total 58 columns):\n",
       "SHIPPING_MODE                 100000 non-null object\n",
       "SHIPPING_PRICE                100000 non-null int64\n",
       "WARRANTIES_FLG                100000 non-null bool\n",
@@ -388,8 +389,12 @@
       "New_Techno                    100000 non-null int64\n",
       "Long_Term_Usage               100000 non-null int64\n",
       "Achat_Passion                 100000 non-null int64\n",
-      "dtypes: bool(1), float64(13), int64(35), object(5)\n",
-      "memory usage: 40.5+ MB\n"
+      "PF_W2V                        100000 non-null float64\n",
+      "PT_W2V                        100000 non-null float64\n",
+      "SM_W2V                        100000 non-null float64\n",
+      "Type_Payment                  100000 non-null object\n",
+      "dtypes: bool(1), float64(16), int64(35), object(6)\n",
+      "memory usage: 43.6+ MB\n"
      ]
     }
    ],
