--- a/Notebook 6 Submitter.ipynb
+++ b/Notebook 6 Submitter.ipynb
@@ -176,7 +176,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 100000 entries, 0 to 99999\n",
-      "Data columns (total 57 columns):\n",
+      "Data columns (total 61 columns):\n",
       "SHIPPING_MODE                 100000 non-null object\n",
       "SHIPPING_PRICE                100000 non-null int64\n",
       "WARRANTIES_FLG                100000 non-null bool\n",
@@ -227,6 +227,10 @@
       "New_Techno                    100000 non-null int64\n",
       "Long_Term_Usage               100000 non-null int64\n",
       "Achat_Passion                 100000 non-null int64\n",
+      "PF_W2V                        100000 non-null float64\n",
+      "PT_W2V                        100000 non-null float64\n",
+      "SM_W2V                        100000 non-null float64\n",
+      "Type_Payment                  100000 non-null object\n",
       "SELLER_ID                     100000 non-null object\n",
       "Count_Sells_ID                100000 non-null float64\n",
       "Mean_Claims_Sells_ID          100000 non-null float64\n",
@@ -234,8 +238,8 @@
       "Count_PRODUCT_TYPE            100000 non-null float64\n",
       "Mean_Claims_PRODUCT_TYPE      100000 non-null float64\n",
       "STD_Claims_PRODUCT_TYPE       100000 non-null float64\n",
-      "dtypes: bool(1), float64(19), int64(31), object(6)\n",
-      "memory usage: 42.8+ MB\n"
+      "dtypes: bool(1), float64(22), int64(31), object(7)\n",
+      "memory usage: 45.9+ MB\n"
      ]
     }
    ],
@@ -285,7 +289,7 @@
     {
      "data": {
       "text/plain": [
-       "38"
+       "49"
       ]
      },
      "execution_count": 12,
@@ -362,21 +366,21 @@
     "# General Parameters -  the overall functioning\n",
     "    'booster':'gbtree',\n",
     "    'silent':0,\n",
-    "    #'nthread':4, # Je le commente, puisque il détecte automatiquement le nombre de cores qu'il peut utiliser.\n",
+    "    'nthread':4,\n",
     "    'n_estimators' : 1000,\n",
     "    \n",
     "# Booster Parameters - the individual booster (tree/regression) at each step\n",
-    "    'learning_rate' : 0.09,\n",
-    "    'min_child_weight' : 1, #A smaller value is chosen because it is a highly imbalanced class problem and leaf nodes can have smaller size groups.\n",
+    "    'learning_rate' : 0.02,\n",
+    "    'min_child_weight' : 5, #A smaller value is chosen because it is a highly imbalanced class problem and leaf nodes can have smaller size groups.\n",
     "    'max_depth' : 4,\n",
     "    #'max_leaf_nodes':None, #If this is defined, GBM will ignore max_depth.\n",
-    "    'gamma' : 0.3,\n",
-    "    'max_delta_step':10, #it might help in logistic regression when class is extremely imbalanced/ 1-10 might help control the update\n",
-    "    'subsample' : 0.7,\n",
-    "    'colsample_bytree' : 0.8,\n",
+    "    'gamma' : 0.4,\n",
+    "    'max_delta_step':4, #it might help in logistic regression when class is extremely imbalanced/ 1-10 might help control the update\n",
+    "    'subsample' : 0.8,\n",
+    "    'colsample_bytree' : 0.9,\n",
     "    'colsample_bylevel':1, #default\n",
     "    'reg_lambda' : 1, #default\n",
-    "    'reg_alpha':0,\n",
+    "    'reg_alpha':0.05,\n",
     "    'scale_pos_weight' : sample_weight_arr,\n",
     "\n",
     "# Learning Task Parameters -  the optimization performed\n",
@@ -413,13 +417,13 @@
      "data": {
       "text/plain": [
        "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-       "       colsample_bytree=0.8, eval_metric='auc', gamma=0.3,\n",
-       "       learning_rate=0.09, max_delta_step=10, max_depth=4,\n",
-       "       min_child_weight=1, missing=None, n_estimators=1000, n_jobs=1,\n",
-       "       nthread=None, num_class=8, objective='multi:softprob',\n",
-       "       random_state=42, reg_alpha=0, reg_lambda=1,\n",
-       "       scale_pos_weight=array([ 2.11077,  0.25012, ...,  1.78546,  0.25012]),\n",
-       "       seed=42, silent=0, subsample=0.7)"
+       "       colsample_bytree=0.9, eval_metric='auc', gamma=0.4,\n",
+       "       learning_rate=0.02, max_delta_step=4, max_depth=4,\n",
+       "       min_child_weight=5, missing=None, n_estimators=1000, n_jobs=1,\n",
+       "       nthread=4, num_class=8, objective='multi:softprob', random_state=42,\n",
+       "       reg_alpha=0.05, reg_lambda=1,\n",
+       "       scale_pos_weight=array([2.11077, 0.25012, ..., 1.78546, 0.25012]),\n",
+       "       seed=42, silent=0, subsample=0.8)"
       ]
      },
      "execution_count": 17,
@@ -444,7 +448,16 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred_gb = xgb_clf.predict(TEST_DATA)"
    ]
@@ -502,7 +515,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>100002</td>\n",
-       "      <td>SELLER_CANCEL_POSTERIORI</td>\n",
+       "      <td>WITHDRAWAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -522,7 +535,7 @@
        "       ID                CLAIM_TYPE\n",
        "0  100000  SELLER_CANCEL_POSTERIORI\n",
        "1  100001                WITHDRAWAL\n",
-       "2  100002  SELLER_CANCEL_POSTERIORI\n",
+       "2  100002                WITHDRAWAL\n",
        "3  100003                         -\n",
        "4  100004                   DAMAGED"
       ]
@@ -542,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = DATA_PROCESSED+\"/submission_XBG_3.csv\"\n",
+    "filename = DATA_PROCESSED+\"/submission_XBG_4.csv\"\n",
     "\n",
     "RESULTS.to_csv(filename, index=False, sep=\";\")"
    ]
