--- a/Notebook 2 Feature Engineering.ipynb
+++ b/Notebook 2 Feature Engineering.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aujourd'hui on se fait rouler par les mecs de l'ENS\n",
+    "# Aujourd'hui on fait du Feature Engineering\n",
     "\n",
     "\n",
     "https://challengedata.ens.fr/en/challenge/39/prediction_of_transaction_claims_status.html\n",
     "\n",
     "\n",
-    "Ici, c'est le notebook dédié au feature enginering - aka: le plus important de tous"
+    "Ici, c'est le notebook dédié au feature enginering - aka: *le plus important de tous*"
    ]
   },
   {
@@ -25,10 +25,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python version: 3.6.4 |Anaconda custom (64-bit)| (default, Mar 12 2018, 20:20:50) [MSC v.1900 64 bit (AMD64)]\n",
+      "Python version: 3.6.5 |Anaconda custom (64-bit)| (default, Mar 29 2018, 13:32:41) [MSC v.1900 64 bit (AMD64)]\n",
       "pandas version: 0.22.0\n",
       "matplotlib version: 2.2.2\n",
-      "NumPy version: 1.14.2\n",
+      "NumPy version: 1.13.3.10\n",
       "SciPy version: 1.0.1\n",
       "IPython version: 6.3.1\n",
       "scikit-learn version: 0.19.1\n",
