--- a/Notebook 3 Stats des SELLERS.ipynb
+++ b/Notebook 3 Stats des SELLERS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aujourd'hui on se fait rouler par les mecs de l'ENS\n",
+    "# Aujourd'hui on fait de stat'\n",
     "\n",
     "\n",
     "https://challengedata.ens.fr/en/challenge/39/prediction_of_transaction_claims_status.html\n",
@@ -27,10 +27,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python version: 3.6.4 |Anaconda custom (64-bit)| (default, Mar 12 2018, 20:20:50) [MSC v.1900 64 bit (AMD64)]\n",
+      "Python version: 3.6.5 |Anaconda custom (64-bit)| (default, Mar 29 2018, 13:32:41) [MSC v.1900 64 bit (AMD64)]\n",
       "pandas version: 0.22.0\n",
       "matplotlib version: 2.2.2\n",
-      "NumPy version: 1.14.2\n",
+      "NumPy version: 1.13.3.10\n",
       "SciPy version: 1.0.1\n",
       "IPython version: 6.3.1\n",
       "scikit-learn version: 0.19.1\n",
@@ -752,12 +752,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On inscrit nos résultats"
+    "### On oublie pas la petite"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.drop('IS_CLAIM', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On inscrit nos résultats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
