--- a/Notebook 6 Submitter.ipynb
+++ b/Notebook 6 Submitter.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aujourd'hui on roule sur les mecs de l'ENS\n",
+    "# Aujourd'hui on voit notre classement\n",
     "\n",
     "\n",
     "https://challengedata.ens.fr/en/challenge/39/prediction_of_transaction_claims_status.html"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,94 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TX_data.drop(['CARD_PAYMENT','COUPON_PAYMENT','RSP_PAYMENT','WALLET_PAYMENT'], axis = 1, inplace = True)\n",
-    "TEST_DATA.drop(['CARD_PAYMENT','COUPON_PAYMENT','RSP_PAYMENT','WALLET_PAYMENT'], axis = 1, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 100000 entries, 0 to 99999\n",
-      "Data columns (total 61 columns):\n",
-      "SHIPPING_MODE                 100000 non-null object\n",
-      "SHIPPING_PRICE                100000 non-null int64\n",
-      "WARRANTIES_FLG                100000 non-null bool\n",
-      "WARRANTIES_PRICE              100000 non-null int64\n",
-      "PRICECLUB_STATUS              100000 non-null int64\n",
-      "REGISTRATION_DATE             100000 non-null int64\n",
-      "PURCHASE_COUNT                100000 non-null int64\n",
-      "BUYER_BIRTHDAY_DATE           100000 non-null float64\n",
-      "BUYER_DEPARTMENT              100000 non-null int64\n",
-      "BUYING_DATE                   100000 non-null int64\n",
-      "SELLER_SCORE_COUNT            100000 non-null int64\n",
-      "SELLER_SCORE_AVERAGE          100000 non-null float64\n",
-      "SELLER_COUNTRY                100000 non-null object\n",
-      "SELLER_DEPARTMENT             100000 non-null int64\n",
-      "PRODUCT_TYPE                  100000 non-null object\n",
-      "PRODUCT_FAMILY                100000 non-null object\n",
-      "ITEM_PRICE                    100000 non-null int64\n",
-      "CLAIM_TYPE                    100000 non-null object\n",
-      "WARRANTY_COV_RATE             100000 non-null float64\n",
-      "SELLER_COUNTRY_GINI           100000 non-null int64\n",
-      "SELLER_COUNTRY_PIB            100000 non-null int64\n",
-      "SELLER_COUNTRY_DISTANCE       100000 non-null int64\n",
-      "BUYER_DEPARTMENT_DENSITY      100000 non-null int64\n",
-      "SELLER_DEPARTMENT_DENSITY     100000 non-null int64\n",
-      "BUYER_DEPARTMENT_PIB          100000 non-null int64\n",
-      "SELLER_DEPARTMENT_PIB         100000 non-null int64\n",
-      "BUYER_DEPARTMENT_Life_Lvl     100000 non-null int64\n",
-      "SELLER_DEPARTMENT_Life_Lvl    100000 non-null int64\n",
-      "BUYER_DEPARTMENT_interD       100000 non-null float64\n",
-      "SELLER_DEPARTMENT_interD      100000 non-null float64\n",
-      "BUYER_DEPARTMENT_Pov          100000 non-null float64\n",
-      "SELLER_DEPARTMENT_Pov         100000 non-null float64\n",
-      "BUYER_DEPARTMENT_min_soc      100000 non-null float64\n",
-      "SELLER_DEPARTMENT_min_soc     100000 non-null float64\n",
-      "BUYER_DEPARTMENT_atk          100000 non-null float64\n",
-      "SELLER_DEPARTMENT_atk         100000 non-null float64\n",
-      "BUYER_DEPARTMENT_cmb          100000 non-null float64\n",
-      "SELLER_DEPARTMENT_cmb         100000 non-null float64\n",
-      "CAC_POINTS                    100000 non-null int64\n",
-      "CAC_VAR                       100000 non-null int64\n",
-      "IS_HOLIDAYS                   100000 non-null int64\n",
-      "IS_SALES                      100000 non-null int64\n",
-      "Delivery_Quality              100000 non-null int64\n",
-      "PGC_FAMILY                    100000 non-null int64\n",
-      "PGC_TYPE                      100000 non-null int64\n",
-      "Daily_Usage                   100000 non-null int64\n",
-      "Consommable                   100000 non-null int64\n",
-      "New_Techno                    100000 non-null int64\n",
-      "Long_Term_Usage               100000 non-null int64\n",
-      "Achat_Passion                 100000 non-null int64\n",
-      "PF_W2V                        100000 non-null float64\n",
-      "PT_W2V                        100000 non-null float64\n",
-      "SM_W2V                        100000 non-null float64\n",
-      "Type_Payment                  100000 non-null object\n",
-      "SELLER_ID                     100000 non-null object\n",
-      "Count_Sells_ID                100000 non-null float64\n",
-      "Mean_Claims_Sells_ID          100000 non-null float64\n",
-      "STD_Claims_Sells_ID           100000 non-null float64\n",
-      "Count_PRODUCT_TYPE            100000 non-null float64\n",
-      "Mean_Claims_PRODUCT_TYPE      100000 non-null float64\n",
-      "STD_Claims_PRODUCT_TYPE       100000 non-null float64\n",
-      "dtypes: bool(1), float64(22), int64(31), object(7)\n",
-      "memory usage: 45.9+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "TX_data.info()"
    ]
@@ -256,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,20 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "49"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train, Y_train = datapreprocess(TX_data)\n",
     "TEST_DATA, _ = datapreprocess(TEST_DATA)\n",
@@ -339,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,15 +273,15 @@
     "    'booster':'gbtree',\n",
     "    'silent':0,\n",
     "    'nthread':4,\n",
-    "    'n_estimators' : 1000,\n",
+    "    'n_estimators' : 500,\n",
     "    \n",
     "# Booster Parameters - the individual booster (tree/regression) at each step\n",
     "    'learning_rate' : 0.02,\n",
-    "    'min_child_weight' : 5, #A smaller value is chosen because it is a highly imbalanced class problem and leaf nodes can have smaller size groups.\n",
+    "    'min_child_weight' : 1, #A smaller value is chosen because it is a highly imbalanced class problem and leaf nodes can have smaller size groups.\n",
     "    'max_depth' : 4,\n",
     "    #'max_leaf_nodes':None, #If this is defined, GBM will ignore max_depth.\n",
     "    'gamma' : 0.4,\n",
-    "    'max_delta_step':4, #it might help in logistic regression when class is extremely imbalanced/ 1-10 might help control the update\n",
+    "    'max_delta_step':1, #it might help in logistic regression when class is extremely imbalanced/ 1-10 might help control the update\n",
     "    'subsample' : 0.8,\n",
     "    'colsample_bytree' : 0.9,\n",
     "    'colsample_bylevel':1, #default\n",
@@ -384,9 +290,10 @@
     "    'scale_pos_weight' : sample_weight_arr,\n",
     "\n",
     "# Learning Task Parameters -  the optimization performed\n",
-    "    'objective' : 'multi:softmax', # you also need to set an additional num_class (number of classes)\n",
+    "    #'objective' : ['rank:pairwise','multi:softmax'], # you also need to set an additional num_class (number of classes)\n",
+    "    'objective' :['reg:gamma', 'rank:pairwise','multi:softmax'],\n",
     "    'num_class' : len(Y_train.unique()),\n",
-    "    'eval_metric':\"auc\",\n",
+    "    'eval_metric':[\"mlogloss\", 'auc'],\n",
     "    'seed' : RANDOM_SEED,\n",
     "    'random_state':RANDOM_SEED\n",
     "}"
@@ -401,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,27 +317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-       "       colsample_bytree=0.9, eval_metric='auc', gamma=0.4,\n",
-       "       learning_rate=0.02, max_delta_step=4, max_depth=4,\n",
-       "       min_child_weight=5, missing=None, n_estimators=1000, n_jobs=1,\n",
-       "       nthread=4, num_class=8, objective='multi:softprob', random_state=42,\n",
-       "       reg_alpha=0.05, reg_lambda=1,\n",
-       "       scale_pos_weight=array([2.11077, 0.25012, ..., 1.78546, 0.25012]),\n",
-       "       seed=42, silent=0, subsample=0.8)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xgb_clf.fit(\n",
     "    X=X_train, \n",
@@ -446,25 +335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
-      "  if diff:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred_gb = xgb_clf.predict(TEST_DATA)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,89 +353,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>CLAIM_TYPE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100000</td>\n",
-       "      <td>SELLER_CANCEL_POSTERIORI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>100001</td>\n",
-       "      <td>WITHDRAWAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>100002</td>\n",
-       "      <td>WITHDRAWAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>100003</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>100004</td>\n",
-       "      <td>DAMAGED</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       ID                CLAIM_TYPE\n",
-       "0  100000  SELLER_CANCEL_POSTERIORI\n",
-       "1  100001                WITHDRAWAL\n",
-       "2  100002                WITHDRAWAL\n",
-       "3  100003                         -\n",
-       "4  100004                   DAMAGED"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "RESULTS.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = DATA_PROCESSED+\"/submission_XBG_4.csv\"\n",
+    "filename = DATA_PROCESSED+\"/submission_XBG_5.csv\"\n",
     "\n",
     "RESULTS.to_csv(filename, index=False, sep=\";\")"
    ]
@@ -577,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
